# millipede

./: .gitignore  CMakeLists.txt  Readme.txt  build-win.sh  require-nmake.sh
archive/dev/i_ivan/watershed/: CMakeLists.txt  DisjointSetForest.cxx  MyWatershedSegmenter.tpp  Test2DImage.cpp
dev/i_ivan/itkExamples/: CMakeLists.txt  FilterExample.cxx  ImageIterator.cxx
modules/millipede/: CMakeLists.txt
modules/millipede/adts/: AdjacencyGraph.h  DisjointSetForest.h
modules/millipede/commands/: BasicCommandManager.h  Command.h  ICommandManager.h
modules/millipede/dicom/directories/: DICOMDirectory.cpp  SeriesRecord.cpp  StudyRecord.cpp
modules/millipede/dicom/volumes/: DICOMVolume.cpp  DICOMVolume.h  DICOMVolumeChoice.h  DICOMVolumeLoader.cpp
modules/millipede/featureid/: AortaIdentifier3D.cpp  AortaIdentifier3D.h  LiverIdentifier3D.cpp  MultiFeatureIdentifier3D.cpp  MultiFeatureIdentifier3D.h  RibsIdentifier3D.h  SpinalCordIdentifier3D.cpp  SpineIdentifier3D.cpp  SpineIdentifier3D.h
modules/millipede/graphics/: PolylineRasterizer.h
modules/millipede/io/files/: DICOMDIRFile.h  DataTableFile.cpp  VolumeChoiceFile.cpp
modules/millipede/io/util/: FieldIO.tpp  LineIO.cpp
modules/millipede/math/: Plane.cpp  Vector3.h
modules/millipede/partitionforests/base/: PFNodeID.h  PartitionForestSelection.h
modules/millipede/partitionforests/graphviz/: PartitionForestGraphvizOutputter.h
modules/millipede/partitionforests/images/: AbdominalFeature.cpp  DICOMImageBranchLayer.h  DICOMImageLeafLayer.cpp  DICOMRegionProperties.h  ImageBranchLayer.h  MosaicImageCreator.h  MosaicTextureSetUpdater.h  SimpleImageLeafLayer.cpp  SimplePixelProperties.cpp  VolumeIPFMultiFeatureSelection.h  VolumeIPFSelection.h
modules/millipede/segmentation/: DICOMLowestLayersBuilder.cpp  DICOMLowestLayersBuilder.h  DICOMSegmentationOptions.h  ForestBuildingWaterfallPassListener.h  SubvolumeToVolumeIndexMapper.cpp  SubvolumeToVolumeIndexMapper.h
modules/millipede/segmentation/waterfall/: MarcoteguiWaterfallPass.h  WaterfallPass.h
modules/millipede/segmentation/watershed/: MeijsterRoerdinkWatershed.h
modules/millipede/shaders/: Shader.cpp  ShaderProgram.cpp
modules/millipede/slices/: SliceOrientation.h  SliceTextureSet.h  SliceTextureSetFiller.h
modules/millipede/src/adts/: Edge.cpp
modules/millipede/src/commands/: BasicCommandManager.cpp  Command.cpp  CommandSequenceGuard.cpp  ICommandManager.cpp  SequenceCommand.cpp  UndoableCommandManager.cpp
modules/millipede/src/featureid/: AortaIdentifier3D.cpp  FeatureIdentifier.cpp  KidneysIdentifier3D.cpp  LiverIdentifier3D.cpp  MultiFeatureIdentifier3D.cpp  RibsIdentifier3D.cpp  SpinalCordIdentifier3D.cpp  SpineIdentifier3D.cpp  SpleenIdentifier3D.cpp
modules/millipede/src/graphics/: PolylineRasterizer.cpp
modules/millipede/src/jobs/: CompositeJob.cpp  Job.cpp  MainThreadJobQueue.cpp  SimpleJob.cpp
modules/millipede/src/math/: MathConstants.cpp  Plane.cpp
modules/millipede/src/ogl/: GLee.c
modules/millipede/src/segmentation/: DICOMLowestLayersBuilder.cpp  DICOMSegmentationOptions.cpp  SubvolumeToVolumeIndexMapper.cpp
modules/millipede/src/shaders/: Shader.cpp  ShaderProgram.cpp
modules/millipede/src/slices/: SliceLocation.cpp
modules/millipede/src/textures/: Greyscale8ImageTexture.cpp  RGB24ImageTexture.cpp  RGBA32ImageTexture.cpp  Texture.cpp  TextureFactory.cpp
modules/millipede/src/util/: DataTable.cpp  GridUtil.cpp  ITKImageUtil.cpp
modules/millipede/src/visualization/: CubeFace.cpp  CubeFaceDesignator.cpp  CubeTable.cpp  MeshRenderer.cpp  MeshRendererCreator.cpp  VisualizationOptions.cpp
modules/millipede/textures/: Texture.h  TextureFactory.cpp
modules/millipede/util/: EnumUtil.h  GridUtil.h  ITKImageUtil.h
modules/millipede/visualization/: CubeFace.h  CubeFaceDesignator.h  CubeFaceGenerator.h  CubeTable.cpp  CubeTriangleGenerator.h  MeshBuildingData.h  MeshDecimator.h  MeshNode.h  MeshRendererCreator.cpp  MeshTransformer.h  SimpleMeshNodeDecimator.h
modules/smgutil/: CMakeLists.txt
modules/smgutil/src/filesystem/: PathFinder.cpp
modules/srgutil/: CMakeLists.txt
modules/srgutil/src/filesystem/: PathFinder.cpp
source/tests/test-partitionforest/: CMakeLists.txt  build-graphs.bat
tests/scratch/: CMakeLists.txt
tests/scratch/ITK/: CMakeLists.txt  main.cpp
tests/scratch/adjacencygraph/: CMakeLists.txt  main.cpp
tests/scratch/boost/: CMakeLists.txt  main.cpp
tests/scratch/gdcm/: CMakeLists.txt  DICOMDIR  main.cpp
tests/scratch/gdcm/resources/: test-gdcm-1.2.5.sh
tests/scratch/jobs/: CMakeLists.txt  main.cpp
tests/scratch/meshbuilder/: CMakeLists.txt  main.cpp
tests/scratch/partitionforest/: CMakeLists.txt  main.cpp
tests/scratch/rootedmst/: CMakeLists.txt  main.cpp
tests/scratch/waterfall/: CMakeLists.txt  compare_all.bat  main.cpp
tests/scratch/waterfall/resources/: compare_all.bat
tests/scratch/watershed/: CMakeLists.txt  main.cpp
tests/scratch/wxWidgets/: CMakeLists.txt  MyApp.cpp  MyApp.h
tests/test-ITK-3.14.0/: CMakeLists.txt  main.cpp
tests/test-boost_1_39_0/: CMakeLists.txt
tests/test-polylinerasterizer/: CMakeLists.txt  main.cpp
tests/test-wxWidgets-2.8.10/: CMakeLists.txt  MyFrame.cpp  MyGLCanvas.h
tests/unit/millipede/: CMakeLists.txt  test_DisjointSetForest.cpp  test_PolylineRasterizer.cpp  test_PriorityQueue.cpp  test_Vector3.cpp
trunk/source/: BoostTestCompilerFlags.cmake  BoostTestPostBuild.cmake  CMakeLists.txt  LinkBoost.cmake  LinkCppTest.cmake  LinkOpenGL.cmake  SetTestTarget.cmake  UseBoost.cmake  UseCppTest.cmake  UseGLEW.cmake  UseOpenGL.cmake  UseWxWidgets.cmake  millipede-config.in.h  vychanges.txt  vychanges.txt~
trunk/source/apps/: CMakeLists.txt
trunk/source/apps/MAST-NEW/: CMakeLists.txt  MyGLCanvas.cpp
trunk/source/apps/m3c/: CMakeLists.txt  main.cpp
trunk/source/apps/mast/: Application.cpp  Application.h  CMakeLists.txt  MyApp.h  phong.frag  phong.vert  testvolume1.vcf  testvolume2.vcf
trunk/source/common/: CMakeLists.txt  CMakeLists.txt~
trunk/source/common/adts/: AdjacencyGraph.h  Edge.cpp  (+6 more)
trunk/source/tests/: CMakeLists.txt
(+1618 files in other folders)
