####################################
# CMakeLists.txt for tests/scratch #
####################################

ADD_SUBDIRECTORY(adjacencygraph)
ADD_SUBDIRECTORY(boost)
ADD_SUBDIRECTORY(gdcm)
ADD_SUBDIRECTORY(ITK)
ADD_SUBDIRECTORY(jobs)
ADD_SUBDIRECTORY(meshbuilder)
ADD_SUBDIRECTORY(rootedmst)
ADD_SUBDIRECTORY(waterfall)
ADD_SUBDIRECTORY(watershed)
ADD_SUBDIRECTORY(wxWidgets)